plugins {
    id 'java'
    id 'jvm-test-suite'
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(22))
    }
}

apply from: "$rootProject.projectDir/srcsets.gradle"

dependencies {
    implementation 'org.jgrapht:jgrapht-core:1.5.2'

    implementation project(':third-party:commons-codec')

    implementation project(':code:index:api')
    implementation project(':code:functions:link-graph:api')

    implementation project(':code:libraries:array')
    implementation project(':code:libraries:btree')

    implementation project(':code:common:db')
    implementation project(':code:common:config')
    implementation project(':code:common:model')
    implementation project(':code:common:linkdb')
    implementation project(':code:common:service')

    implementation project(':code:functions:search-query:api')

    implementation project(':code:index:index-forward')
    implementation project(':code:index:index-reverse')
    implementation project(':code:index:query')
    implementation project(':code:index:index-journal')


    implementation libs.bundles.slf4j

    implementation libs.prometheus
    implementation libs.roaringbitmap
    implementation libs.bundles.grpc
    implementation libs.notnull
    implementation libs.guice
    implementation libs.trove
    implementation libs.fastutil
    implementation libs.bundles.gson
    implementation libs.bundles.mariadb

    testImplementation libs.bundles.slf4j.test
    testImplementation libs.bundles.junit
    testImplementation libs.mockito
    testImplementation libs.commons.lang3
    testImplementation project(':code:common:process')
    testImplementation project(':code:libraries:array')

    testImplementation platform('org.testcontainers:testcontainers-bom:1.17.4')
    testImplementation 'org.testcontainers:mariadb:1.17.4'
    testImplementation 'org.testcontainers:junit-jupiter:1.17.4'
    testImplementation project(':code:libraries:test-helpers')
    testImplementation project(':code:libraries:term-frequency-dict')
    testImplementation project(':code:libraries:braille-block-punch-cards')
}
